@@ -1,3 +1,8 @@
+2007-04-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 
+
+	* X11Display.cs, XplatUIX11-new.cs: Add and implement
+	  DefineStdCursorBitmap.
+
 2007-04-03  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Xlib.cs: Remove import of libgdiplus' GetFontMetrics (it doesn't 
